[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scenes/UI/MelonManager.gd" type="Script" id=1]
[ext_resource path="res://assets/towers/range.png" type="Texture" id=3]

[node name="MelonManager" type="Control"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="NextRange" type="Sprite" parent="UI"]
visible = false
texture = ExtResource( 3 )

[node name="HUD" type="VBoxContainer" parent="UI"]
margin_left = -90.0
margin_top = -80.0
margin_right = 80.0
rect_min_size = Vector2( 180, 80 )
custom_constants/separation = 10
alignment = 1

[node name="UpgradeBar" type="HBoxContainer" parent="UI/HUD"]
margin_right = 180.0
margin_bottom = 80.0
rect_min_size = Vector2( 180, 80 )
custom_constants/separation = 20
alignment = 1

[node name="MelonBox" type="HBoxContainer" parent="UI/HUD"]
margin_top = 90.0
margin_right = 180.0
margin_bottom = 90.0

[node name="SellBar" type="HBoxContainer" parent="UI/HUD"]
margin_top = 100.0
margin_right = 180.0
margin_bottom = 180.0
rect_min_size = Vector2( 180, 80 )
alignment = 1

[connection signal="mouse_entered" from="UI/HUD" to="." method="_on_HUD_mouse_entered"]
[connection signal="mouse_exited" from="UI/HUD" to="." method="_on_HUD_mouse_exited"]
